Updated APIs:  upload , getAllDocuments